main/main-reader/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timestamp-reader-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: timestamp-reader
  template:
    metadata:
      labels:
        app: timestamp-reader
    spec:
      containers:
        - name: timestamp
          image: jacker92/timestamp-reader:latest
