main/main-reader/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-svc
spec:
  type: ClusterIP
  selector:
    app: timestamp-reader
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
